--- a/index.html
+++ b/index.html
@@ -1,79 +1,347 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Your booking request has been confirmed</title>
+  <!-- Designed by https://github.com/kaytcat -->
+  <!-- Header image designed by Freepik.com -->
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Mailtest : ">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <style type="text/css">
+  /* Take care of image borders and formatting */
 
-    <title>Mailtest</title>
-  </head>
+  img {
+    max-width: 600px;
+    outline: none;
+    text-decoration: none;
+    -ms-interpolation-mode: bicubic;
+  }
 
-  <body>
+  a img { border: none; }
+  table { border-collapse: collapse !important; }
+  #outlook a { padding:0; }
+  .ReadMsgBody { width: 100%; }
+  .ExternalClass {width:100%;}
+  .backgroundTable {margin:0 auto; padding:0; width:100%;}
+  table td {border-collapse: collapse;}
+  .ExternalClass * {line-height: 115%;}
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/asgarov/mailtest">View on GitHub</a>
 
-          <h1 id="project_title">Mailtest</h1>
-          <h2 id="project_tagline"></h2>
+  /* General styling */
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/asgarov/mailtest/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/asgarov/mailtest/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+  td {
+    font-family: Arial, sans-serif;
+    color: #6f6f6f;
+  }
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+  body {
+    -webkit-font-smoothing:antialiased;
+    -webkit-text-size-adjust:none;
+    width: 100%;
+    height: 100%;
+    color: #6f6f6f;
+    font-weight: 400;
+    font-size: 18px;
+  }
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+  h1 {
+    margin: 10px 0;
+  }
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+  a {
+    color: #27aa90;
+    text-decoration: none;
+  }
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+  .force-full-width {
+    width: 100% !important;
+  }
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+  .force-width-80 {
+    width: 80% !important;
+  }
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+  .body-padding {
+    padding: 0 75px;
+  }
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+  .mobile-align {
+    text-align: right;
+  }
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+  </style>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Mailtest maintained by <a href="https://github.com/asgarov">asgarov</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+  <style type="text/css" media="screen">
+      @media screen {
+        @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,900);
+        /* Thanks Outlook 2013! http://goo.gl/XLxpyl */
+        * {
+          font-family: 'Source Sans Pro', 'Helvetica Neue', 'Arial', 'sans-serif' !important;
+        }
+        .w280 {
+          width: 280px !important;
+        }
 
-    
+      }
+  </style>
 
-  </body>
+  <style type="text/css" media="only screen and (max-width: 480px)">
+    /* Mobile styles */
+    @media only screen and (max-width: 480px) {
+
+      table[class*="w320"] {
+        width: 320px !important;
+      }
+
+      td[class*="w320"] {
+        width: 280px !important;
+        padding-left: 20px !important;
+        padding-right: 20px !important;
+      }
+
+      img[class*="w320"] {
+        width: 250px !important;
+        height: 67px !important;
+      }
+
+      td[class*="mobile-spacing"] {
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
+      }
+
+      *[class*="mobile-hide"] {
+        display: none !important;
+      }
+
+      *[class*="mobile-br"] {
+        font-size: 12px !important;
+      }
+
+      td[class*="mobile-w20"] {
+        width: 20px !important;
+      }
+
+      img[class*="mobile-w20"] {
+        width: 20px !important;
+      }
+
+      td[class*="mobile-center"] {
+        text-align: center !important;
+      }
+
+      table[class*="w100p"] {
+        width: 100% !important;
+      }
+
+      td[class*="activate-now"] {
+        padding-right: 0 !important;
+        padding-top: 20px !important;
+      }
+
+      td[class*="mobile-block"] {
+        display: block !important;
+      }
+
+      td[class*="mobile-align"] {
+        text-align: left !important;
+      }
+
+    }
+  </style>
+</head>
+<body  class="body" style="padding:0; margin:0; display:block; background:#eeebeb; -webkit-text-size-adjust:none;" bgcolor="#eeebeb">
+<table align="center" cellpadding="0" cellspacing="0" width="100%">
+  <tr>
+    <td align="center" valign="top" style="background-color:#eeebeb" width="100%">
+
+    <center>
+
+      <table cellspacing="0" cellpadding="0" width="600" class="w320">
+        <tr>
+          <td align="center" valign="top">
+
+
+          <table style="margin:0 auto;" cellspacing="0" cellpadding="0" width="100%">
+            <tr>
+              <td style="text-align: center;">
+                <a href="#"><img class="w320" width="311" height="96" src="http://cl.ly/image/3Y1s3C2P3B3C/Artboard%201.png" alt="company logo" /></a>
+              </td>
+            </tr>
+          </table>
+
+
+          <table cellspacing="0" cellpadding="0" class="force-full-width" style="background-color:#B0D7EE;">
+            <tr>
+              <td style="background-color:#B0D7EE;">
+
+                <table cellspacing="0" cellpadding="0" class="force-full-width">
+                  <tr>
+                    <td style="font-size:40px; font-weight: 300; color: #ffffff; text-align:center;" class="mobile-spacing">
+                    <div class="mobile-br">&nbsp;</div>
+                      Your booking is confirmed!
+                    <br/>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="font-size:20px; text-align:center; padding: 0 75px; color: #ffffff;" class="w320 mobile-spacing">
+                     We would like you to know that your booking is confirmed! Details below.
+                    </td>
+                  </tr>
+                </table>
+
+                <table cellspacing="0" cellpadding="0" width="100%">
+                  <tr>
+                    <td>
+                      <img src="http://cl.ly/image/2j172p1C2m3Q/Artboard.jpg" style="max-width:100%; display:block;">
+                    </td>
+                  </tr>
+                </table>
+
+              </td>
+            </tr>
+          </table>
+
+          <table cellspacing="0" cellpadding="0" class="force-full-width" bgcolor="#ffffff" >
+            <tr>
+              <td style="background-color:#ffffff; padding-top: 15px;">
+
+              <center>
+                <table style="margin: 0 auto;" cellspacing="0" cellpadding="0" class="force-width-80">
+                  <tr>
+                    <td style="text-align: left;">
+                    <br>
+                      <strong>Nash, your booking is now confirmed, thanks for using CrescentTours.com!</strong>
+                    </td>
+                  </tr>
+                </table>
+
+                <table style="margin:0 auto;" cellspacing="0" cellpadding="0" class="force-width-80">
+                  <tr>
+                    <td style="text-align:left;">
+                    <br>
+                    <strong>Shipping Address:</strong><br>
+                      Bob Erlicious<br>
+                      1234 Bobbz Way <br>
+                      Victoria, BC <br>
+                      V2A 7D8
+                    </td>
+                    <td style="text-align:right; vertical-align:top;">
+                    <br>
+                    <b>Order: 23130</b> <br>
+                    2014-04-23
+                    </td>
+                  </tr>
+                </table>
+
+                <table style="margin:0 auto;" cellspacing="0" cellpadding="0" class="force-width-80">
+                  <tr>
+                    <td  class="mobile-block">
+                    <br>
+
+                      <table cellspacing="0" cellpadding="0" class="force-full-width">
+                        <tr>
+                          <td style="border-bottom:1px solid #e3e3e3; font-weight: bold; text-align:left">
+                          Delivery Date
+                          </td>
+                        </tr>
+                        <tr>
+                          <td style="text-align:left;">
+                           Monday, 20th May 2014
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                </table>
+
+
+                <table style="margin: 0 auto;" cellspacing="0" cellpadding="0" class="force-width-80">
+                  <tr>
+                    <td style="text-align: left;">
+                    <br>
+                      To track or view your order please click the button below. Thank you for your business.<br><br>
+                      Awesome Inc
+                    </td>
+                  </tr>
+                </table>
+              </center>
+
+              <table style="margin:0 auto;" cellspacing="0" cellpadding="10" width="100%">
+                <tr>
+                  <td style="text-align:center; margin:0 auto;">
+                  <br>
+                    <div><!--[if mso]>
+                      <v:rect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://" style="height:45px;v-text-anchor:middle;width:180px;" stroke="f" fillcolor="#f5774e">
+                        <w:anchorlock/>
+                        <center>
+                      <![endif]-->
+                          <a href="http://"
+                        style="background-color:#f5774e;color:#ffffff;display:inline-block;font-family:'Source Sans Pro', Helvetica, Arial, sans-serif;font-size:18px;font-weight:400;line-height:45px;text-align:center;text-decoration:none;width:180px;-webkit-text-size-adjust:none;">My Order</a>
+                          <!--[if mso]>
+                        </center>
+                      </v:rect>
+                    <![endif]--></div>
+                    <br>
+                  </td>
+                </tr>
+              </table>
+
+
+              <table cellspacing="0" cellpadding="0" bgcolor="#363636"  class="force-full-width">
+                <tr>
+                  <td style="background-color:#363636; text-align:center;">
+                  <br>
+                  <br>
+                    <img width="62" height="56" img src="https://www.filepicker.io/api/file/FjkhDKXsTFyaHnXhhBCw">
+                    <img width="68" height="56" src="https://www.filepicker.io/api/file/W6gXqm5BRL6qSvQRcI7u">
+                    <img width="61" height="56" src="https://www.filepicker.io/api/file/eV9YfQkBTiaOu9PA9gxv">
+                  <br>
+                  <br>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="color:#f0f0f0; font-size: 14px; text-align:center; padding-bottom:4px;">
+                    © 2014 All Rights Reserved
+                  </td>
+                </tr>
+                <tr>
+                  <td style="color:#27aa90; font-size: 14px; text-align:center;">
+                    <a href="#">View in browser</a> | <a href="#">Contact</a> | <a href="#">Unsubscribe</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="font-size:12px;">
+                    &nbsp;
+                  </td>
+                </tr>
+              </table>
+
+              </td>
+            </tr>
+          </table>
+
+
+
+
+
+
+
+          </td>
+        </tr>
+      </table>
+
+    </center>
+
+
+
+
+    </td>
+  </tr>
+</table>
+</body>
 </html>
