--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       img[class*="w320"] {
         width: 250px !important;
-        height: 67px !important;
+        height: 80px !important;
       }
 
       td[class*="mobile-spacing"] {
@@ -265,7 +265,7 @@
                     <td style="text-align: left;">
                     <br>
                       To track or view your order please click the button below. Thank you for your business.<br><br>
-                      Awesome Inc
+                      HalalBooking.com
                     </td>
                   </tr>
                 </table>
@@ -281,7 +281,7 @@
                         <center>
                       <![endif]-->
                           <a href="http://"
-                        style="background-color:#f5774e;color:#ffffff;display:inline-block;font-family:'Source Sans Pro', Helvetica, Arial, sans-serif;font-size:18px;font-weight:400;line-height:45px;text-align:center;text-decoration:none;width:180px;-webkit-text-size-adjust:none;">My Order</a>
+                        style="background-color:#32A79C;color:#ffffff;display:inline-block;font-family:'Source Sans Pro', Helvetica, Arial, sans-serif;font-size:18px;font-weight:400;line-height:45px;text-align:center;text-decoration:none;width:180px;-webkit-text-size-adjust:none;">My Order</a>
                           <!--[if mso]>
                         </center>
                       </v:rect>
